<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="default_content_description">saraka image</string>
    <string name="quck_search_text_hint">Quick search</string>
    <string name="default_navication_page_label_text">Dashboard</string>
    <string name="list_search_text_hint">Search Current List</string>
    <string name="default_dashboard_item_name">Acommodation</string>
    <string name="default_dashboard_item_tagline">Sleep Slip</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_msg">
<![CDATA[
		Saraka is an interactive information directory in Uganda. <br /><br />
		Get the scoop of information on everything from accomodation, tourist attractions, and employment - and rate what you like, too.<br /><br />
		Keep your Saraka with the latest information by Clicking on : Menu >> Update to download.
		]]>
    </string>
    <string name="ok">OK</string>
    <string name="update_title">
<![CDATA[
		Update, to download the latest listings.
		]]>
    </string>
    <string name="download_text">Downloading, please wait..</string>
    <string name="progress_text">Progress: 0%</string>
    <string name="download_button_text">Update</string>
    <string name="download_button_cancel_text">Back</string>
	<string name="advert_title_text">ads</string>
	<string name="default_listing_item_name">Fang Fang Restuarant</string>
	<string name="default_listing_item_tagline">Best Quality Food.</string>
	<string name="default_detail_name">ACCACIA APARTMENTS</string>
	<string name="default_detail_tagline">Home is near home</string>
	<string name="default_detail_address_banner">Address:</string>
	<string name="default_detail_address_text">Plot 3A Accacia Avenue, 48 Windsor Crescent Kololo, Kampala</string>
	<string name="default_detail_telphone_banner">Telphone(s):</string>
	<string name="default_detail_telphone_text">(+256)705445655,437655886</string>
	<string name="default_detail_fax_banner">Fax:</string>
	<string name="default_detail_fax_text">00001000000</string>
	<string name="default_detail_url_banner">Url</string>
	<string name="default_detail_url_text">www.accaciaapartments.co.ug</string>
	<string name="default_detail_email_banner">Email:</string>
	<string name="default_detail_email_text">info@accaciaapartment.co.ug</string>
	<string name="default_detail_location_banner">Location:</string>
	<string name="default_detail_location_text">Kampala, Wampewo</string>
	<string name="default_email_subject_text">Subject:</string>
    <string name="default_email_text">Message:</string>
    <string name="email_send_btn_text">Send</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="default_owner_text">Your name:</string>
    <string name="default_comment_text">Comment:</string>
    <string name="comment_send_btn_text">Send</string>
</resources>