<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10sp" >

    <EditText
        android:id="@+id/txtemail_subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/default_email_subject_text"
        android:singleLine="true" 
        android:inputType="textEmailSubject">
    </EditText>

    <EditText
        android:id="@+id/txtemail_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/default_email_text"
        android:inputType="textMultiLine"
        android:lines="5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/email_btn_send"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/email_send_btn_text" />

        <Button
            android:id="@+id/email_btn_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/email_btn_send"
            android:text="@string/cancel_btn_text" />
    </RelativeLayout>

</LinearLayout>