<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateUI" >

    <LinearLayout
        android:id="@+id/updateui_dv"
        style="@style/updateUi"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/update_logo_div"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                style="@style/updateUiLogo"
                android:contentDescription="@string/default_content_description"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_text_div"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:background="@null"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/updateTitleText"
                style="@style/updateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center" />

            <ProgressBar
                android:id="@+id/update_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="5dip"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip" />

            <TextView
                android:id="@+id/update_download_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:text="@string/download_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/update_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:shadowColor="#000000"
                android:shadowDx="2.0"
                android:shadowDy="2.0"
                android:shadowRadius="3.0"
                android:text="@string/progress_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <LinearLayout
                android:id="@+id/updateui_button_dv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/update_download_btn"
                    style="@style/updateUiDownloadBtn" />

                <Button
                    android:id="@+id/update_back_btn"
                    style="@style/updateUiBackBtn" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>